feat: inspiration
